// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Output File Strategy should --reflectionsWithOwnFile [class, interface]' 1`] = `
[
  "modules.md",
  "README.md",
  "module-1/module-1.md",
  "module-1/namespaces/someNameSpace/namespace.someNameSpace.md",
  "module-1/namespaces/someNameSpace/namespaces/nestedNamespace/namespace.nestedNamespace.md",
  "module-1/namespaces/someNameSpace/classes/class.NameSpaceClassA.md",
  "module-1/namespaces/someNameSpace/interfaces/interface.NamespaceInterface.md",
  "module-1/classes/class.Module1ClassA.md",
  "module-1/classes/class.Module1ClassB.md",
  "module-1/interfaces/interface.Module1InterfaceA.md",
  "module-1/interfaces/interface.Module1InterfaceB.md",
  "module-2/module-2.md",
  "module-2/classes/class.Module2ClassA.md",
  "module-2/classes/class.Module2ClassB.md",
  "module-2/interfaces/interface.Module2InterfaceA.md",
  "module-2/interfaces/interface.Module2InterfaceB.md",
]
`;

exports[`Output File Strategy should --reflectionsWithOwnFile [class]' 1`] = `
[
  "modules.md",
  "README.md",
  "module-1/module-1.md",
  "module-1/namespaces/someNameSpace/namespace.someNameSpace.md",
  "module-1/namespaces/someNameSpace/namespaces/nestedNamespace/namespace.nestedNamespace.md",
  "module-1/namespaces/someNameSpace/classes/class.NameSpaceClassA.md",
  "module-1/classes/class.Module1ClassA.md",
  "module-1/classes/class.Module1ClassB.md",
  "module-2/module-2.md",
  "module-2/classes/class.Module2ClassA.md",
  "module-2/classes/class.Module2ClassB.md",
]
`;

exports[`Output File Strategy should set --reflectionsWithOwnFile none' 1`] = `
[
  "modules.md",
  "README.md",
  "module-1/module-1.md",
  "module-1/namespaces/someNameSpace/namespace.someNameSpace.md",
  "module-1/namespaces/someNameSpace/namespaces/namespace.nestedNamespace.md",
  "module-2.md",
]
`;

exports[`Output File Strategy should set default --reflectionsWithOwnFile 'all' (modules) 1`] = `
[
  "modules.md",
  "README.md",
  "module-1/module-1.md",
  "module-1/namespaces/someNameSpace/namespace.someNameSpace.md",
  "module-1/namespaces/someNameSpace/namespaces/nestedNamespace/namespace.nestedNamespace.md",
  "module-1/namespaces/someNameSpace/namespaces/nestedNamespace/variables/variable.nestedNamespaceVariable.md",
  "module-1/namespaces/someNameSpace/enums/enumeration.NamespaceEnum.md",
  "module-1/namespaces/someNameSpace/classes/class.NameSpaceClassA.md",
  "module-1/namespaces/someNameSpace/interfaces/interface.NamespaceInterface.md",
  "module-1/namespaces/someNameSpace/types/type alias.NamespaceTypeLiteral.md",
  "module-1/namespaces/someNameSpace/variables/variable.namespaceVariable.md",
  "module-1/enums/enumeration.Module1EnumA.md",
  "module-1/enums/enumeration.Module1EnumB.md",
  "module-1/classes/class.Module1ClassA.md",
  "module-1/classes/class.Module1ClassB.md",
  "module-1/interfaces/interface.Module1InterfaceA.md",
  "module-1/interfaces/interface.Module1InterfaceB.md",
  "module-1/types/type alias.Module1TypeLiteralA.md",
  "module-1/types/type alias.Module1TypeLiteralB.md",
  "module-1/variables/variable.module1VariableA.md",
  "module-1/variables/variable.module1VariableB.md",
  "module-1/functions/function.module1FunctionA.md",
  "module-1/functions/function.module1FunctionB.md",
  "module-2/module-2.md",
  "module-2/enums/enumeration.Module2EnumA.md",
  "module-2/enums/enumeration.Module2EnumB.md",
  "module-2/classes/class.Module2ClassA.md",
  "module-2/classes/class.Module2ClassB.md",
  "module-2/interfaces/interface.Module2InterfaceA.md",
  "module-2/interfaces/interface.Module2InterfaceB.md",
  "module-2/types/type alias.Module2TypeLiteralA.md",
  "module-2/types/type alias.Module2TypeLiteralB.md",
  "module-2/variables/variable.module2VariableA.md",
  "module-2/variables/variable.module2VariableB.md",
  "module-2/functions/function.module2FunctionA.md",
  "module-2/functions/function.module2sFunctionB.md",
]
`;

exports[`Output File Strategy should set default --reflectionsWithOwnFile 'all' (namespaces) 1`] = `
[
  "modules.md",
  "README.md",
  "classes/namespace.classes.md",
  "classes/classes/class.Animal.md",
  "classes/classes/class.Base.md",
  "classes/classes/class.C.md",
  "classes/classes/class.Derived.md",
  "classes/classes/class.Dog.md",
  "classes/classes/class.IndexableClass.md",
  "classes/classes/class.Point.md",
  "declarations/namespace.declarations.md",
  "declarations/enums/enumeration.EnumDeclarations.md",
  "declarations/enums/enumeration.EnumDeclarationsWithDefaults.md",
  "declarations/types/type alias.AnyFunctionType.md",
  "declarations/variables/variable.__DOUBLE_UNDERSCORES_DECLARATION__.md",
  "declarations/variables/variable.enuRef.md",
  "declarations/variables/variable.getterAndSetter.md",
  "declarations/variables/variable.indexableDeclaration.md",
  "declarations/variables/variable.objectLiteralAsConstDeclaration.md",
  "declarations/variables/variable.objectLiteralDeclaration.md",
  "declarations/variables/variable.stringConstWithDefaultValue.md",
  "declarations/variables/variable.stringLetWithDefaultValue.md",
  "declarations/variables/variable.typeLiteralDeclaration.md",
  "declarations/variables/variable.undefinedNumberDeclaration.md",
  "declarations/functions/function.functionDeclaration.md",
  "someParentNamespace/namespace.someParentNamespace.md",
  "someParentNamespace/namespaces/someNameSpace/namespace.someNameSpace.md",
  "someParentNamespace/namespaces/someNameSpace/namespaces/nestedNamespace/namespace.nestedNamespace.md",
  "someParentNamespace/namespaces/someNameSpace/namespaces/nestedNamespace/variables/variable.nestedNamespaceVariable.md",
  "someParentNamespace/namespaces/someNameSpace/enums/enumeration.NamespaceEnum.md",
  "someParentNamespace/namespaces/someNameSpace/classes/class.NameSpaceClassA.md",
  "someParentNamespace/namespaces/someNameSpace/interfaces/interface.NamespaceInterface.md",
  "someParentNamespace/namespaces/someNameSpace/types/type alias.NamespaceTypeLiteral.md",
  "someParentNamespace/namespaces/someNameSpace/variables/variable.namespaceVariable.md",
  "someParentNamespace/enums/enumeration.Module1EnumA.md",
  "someParentNamespace/enums/enumeration.Module1EnumB.md",
  "someParentNamespace/classes/class.Module1ClassA.md",
  "someParentNamespace/classes/class.Module1ClassB.md",
  "someParentNamespace/interfaces/interface.Module1InterfaceA.md",
  "someParentNamespace/interfaces/interface.Module1InterfaceB.md",
  "someParentNamespace/types/type alias.Module1TypeLiteralA.md",
  "someParentNamespace/types/type alias.Module1TypeLiteralB.md",
  "someParentNamespace/variables/variable.module1VariableA.md",
  "someParentNamespace/variables/variable.module1VariableB.md",
  "someParentNamespace/functions/function.module1FunctionA.md",
  "someParentNamespace/functions/function.module1FunctionB.md",
]
`;

exports[`Output File Strategy should set default --reflectionsWithOwnFile 'none' (namespaces) 1`] = `
[
  "modules.md",
  "README.md",
  "namespace.classes.md",
  "namespace.declarations.md",
  "someParentNamespace/namespace.someParentNamespace.md",
  "someParentNamespace/namespaces/someNameSpace/namespace.someNameSpace.md",
  "someParentNamespace/namespaces/someNameSpace/namespaces/namespace.nestedNamespace.md",
]
`;

exports[`Output File Strategy should set reflectionsWithOwnFile [enum, types, variables]' 1`] = `
[
  "modules.md",
  "README.md",
  "module-1/module-1.md",
  "module-1/namespaces/someNameSpace/namespace.someNameSpace.md",
  "module-1/namespaces/someNameSpace/namespaces/nestedNamespace/namespace.nestedNamespace.md",
  "module-1/namespaces/someNameSpace/namespaces/nestedNamespace/variables/variable.nestedNamespaceVariable.md",
  "module-1/namespaces/someNameSpace/enums/enumeration.NamespaceEnum.md",
  "module-1/namespaces/someNameSpace/types/type alias.NamespaceTypeLiteral.md",
  "module-1/namespaces/someNameSpace/variables/variable.namespaceVariable.md",
  "module-1/enums/enumeration.Module1EnumA.md",
  "module-1/enums/enumeration.Module1EnumB.md",
  "module-1/types/type alias.Module1TypeLiteralA.md",
  "module-1/types/type alias.Module1TypeLiteralB.md",
  "module-1/variables/variable.module1VariableA.md",
  "module-1/variables/variable.module1VariableB.md",
  "module-2/module-2.md",
  "module-2/enums/enumeration.Module2EnumA.md",
  "module-2/enums/enumeration.Module2EnumB.md",
  "module-2/types/type alias.Module2TypeLiteralA.md",
  "module-2/types/type alias.Module2TypeLiteralB.md",
  "module-2/variables/variable.module2VariableA.md",
  "module-2/variables/variable.module2VariableB.md",
]
`;

exports[`Output File Strategy should set with --groupByReflection=false (modules) 1`] = `
[
  "modules.md",
  "README.md",
  "module-1/module-1.md",
  "module-1/namespaces/someNameSpace/namespace.someNameSpace.md",
  "module-1/namespaces/someNameSpace/namespaces/nestedNamespace/namespace.nestedNamespace.md",
  "module-1/namespaces/someNameSpace/namespaces/nestedNamespace/variable.nestedNamespaceVariable.md",
  "module-1/namespaces/someNameSpace/enumeration.NamespaceEnum.md",
  "module-1/namespaces/someNameSpace/class.NameSpaceClassA.md",
  "module-1/namespaces/someNameSpace/interface.NamespaceInterface.md",
  "module-1/namespaces/someNameSpace/type alias.NamespaceTypeLiteral.md",
  "module-1/namespaces/someNameSpace/variable.namespaceVariable.md",
  "module-1/enumeration.Module1EnumA.md",
  "module-1/enumeration.Module1EnumB.md",
  "module-1/class.Module1ClassA.md",
  "module-1/class.Module1ClassB.md",
  "module-1/interface.Module1InterfaceA.md",
  "module-1/interface.Module1InterfaceB.md",
  "module-1/type alias.Module1TypeLiteralA.md",
  "module-1/type alias.Module1TypeLiteralB.md",
  "module-1/variable.module1VariableA.md",
  "module-1/variable.module1VariableB.md",
  "module-1/function.module1FunctionA.md",
  "module-1/function.module1FunctionB.md",
  "module-2/module-2.md",
  "module-2/enumeration.Module2EnumA.md",
  "module-2/enumeration.Module2EnumB.md",
  "module-2/class.Module2ClassA.md",
  "module-2/class.Module2ClassB.md",
  "module-2/interface.Module2InterfaceA.md",
  "module-2/interface.Module2InterfaceB.md",
  "module-2/type alias.Module2TypeLiteralA.md",
  "module-2/type alias.Module2TypeLiteralB.md",
  "module-2/variable.module2VariableA.md",
  "module-2/variable.module2VariableB.md",
  "module-2/function.module2FunctionA.md",
  "module-2/function.module2sFunctionB.md",
]
`;
